# ego-demo

./: .clang-tidy  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG  CONTRIBUTING.md  NOTICE  OWNERS.md  README.md  WORKSPACE  ego-demo.sh  envoy.yaml  go.mod  go.sum
ego/: .gitignore  README.md
ego/src/cc/: README.md
ego/src/cc/filter/http/: BUILD.bazel  cgo-proxy.cc  cgo-proxy.h  factory.cc  filter-cgo.cc  filter-goc.cc  filter-native.cc  filter.h  filter.proto  integration_test.cc  native.cc  span-group.cc  span-group.h
ego/src/cc/goc/: BUILD.bazel  bufferinstance.cc  envoy.h  goc.cc  goc.h  gohttpfilter.cc  log.cc  requestheadermap.cc  requesttrailermap.cc  responseheadermap.cc  stats.cc
ego/src/cc/goc/proto/: BUILD.bazel  dto.proto
ego/src/go/: BUILD.bazel  README.md  httpfilter.go  registry.go
ego/src/go/envoy/: BUILD.bazel  envoy.go
ego/src/go/envoy/datastatus/: BUILD.bazel  const.go
ego/src/go/envoy/headersstatus/: BUILD.bazel  const.go
ego/src/go/envoy/lifespan/: BUILD.bazel  const.go
ego/src/go/envoy/loglevel/: BUILD.bazel  const.go
ego/src/go/envoy/statetype/: BUILD.bazel  const.go
ego/src/go/envoy/stats/: BUILD.bazel  const.go
ego/src/go/envoy/trailersstatus/: BUILD.bazel  const.go
ego/src/go/internal/cgo/: BUILD.bazel  bufferinstance.go  clutch.go  clutch_test.go  cutils.go  decoder_callbacks.go  encoder_callbacks.go  filter_state.go  gohttpfilter.go  gohttpfilterconfig.go  logger.go  main.go  requestheadermap.go  requesttrailermap.go  responseheadermap.go  route.go  span.go  stats.go  stream_info.go
ego/src/go/logger/: BUILD.bazel  logger.go
ego/src/go/volatile/: BUILD.bazel  volatile.go
ego/test/cc/filter/http/: BUILD.bazel  filter_test.cc  linkopts.bzl  mocks.h  span-group_test.cc
ego/test/cc/goc/: BUILD.bazel  requestheadermap_test.cc
ego/test/go/mock/: BUILD.bazel  doc.go  envoy.go  logger.go
egofilters/: BUILD.bazel  filters.go
egofilters/http/getheader/: BUILD.bazel  factory.go  filter.go
egofilters/http/getheader/proto/: BUILD.bazel  getheader.proto
egofilters/http/security/: BUILD.bazel  config.go  config_test.go  factory.go  factory_test.go  filter.go  filter_sign_test.go  filter_verify_test.go
egofilters/http/security/context/: BUILD.bazel  context.go  request_context.go  request_context_test.go  response_context.go  response_context_test.go
egofilters/http/security/http/: BUILD.bazel  http_client.go  http_client_test.go
egofilters/http/security/proto/: BUILD.bazel  security.proto
egofilters/http/security/verifier/: BUILD.bazel  base_provider.go  consts.go  custom_hmac_provider.go  custom_hmac_provider_factory_test.go  custom_hmac_provider_sign_required_test.go  custom_hmac_provider_sign_test.go  custom_hmac_provider_verify_test.go  custom_hmac_validator.go  custom_hmac_validator_test.go  verifier.go
egofilters/mock/: BUILD.bazel  doc.go
services/echo/: BUILD.bazel  main.go
services/hmac/: BUILD.bazel  main.go
tools/: copy_pb_go.py  gen_compilation_database.py  generate_test_coverage_report.sh  sync.sh
