# Copyright 2020-2021 Grabtaxi Holdings PTE LTE (GRAB), All rights reserved.
#
# Use of this source code is governed by the Apache License 2.0 that can be
# found in the LICENSE file

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@envoy//bazel:envoy_build_system.bzl", "envoy_cc_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["filters.go"],
    importpath = "github.com/grab/ego/egofilters",
    visibility = ["//visibility:public"],
    deps = [
        "//ego/src/go:go_default_library",
        "//egofilters/http/getheader:go_default_library",
        "//egofilters/http/security:go_default_library",
    ],
)

# This is our "Registry" equivalent for the proto schemas. By linking
# this with the envoy binary, envoy will be able to parse filter-specific
# configs.
#
envoy_cc_library(
    name = "ego_filter_protos",
    repository = "@envoy",
    deps = [
        "//egofilters/http/getheader/proto:pkg_cc_proto",
        "//egofilters/http/security/proto:pkg_cc_proto",
    ],
)
