# Copyright 2020-2021 Grabtaxi Holdings PTE LTE (GRAB), All rights reserved.
#
# Use of this source code is governed by the Apache License 2.0 that can be
# found in the LICENSE file

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/grab/ego/ego/src/go/logger",
    visibility = ["//visibility:public"],
    deps = ["//ego/src/go/envoy/loglevel:go_default_library"],
)
