# Copyright 2020-2021 Grabtaxi Holdings PTE LTE (GRAB), All rights reserved.
#
# Use of this source code is governed by the Apache License 2.0 that can be
# found in the LICENSE file

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["http_client.go"],
    importpath = "github.com/grab/ego/egofilters/http/security/http",
    visibility = ["//visibility:public"],
    deps = ["//egofilters/http/security/context:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["http_client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//ego/test/go/mock/gen/envoy:go_default_library",
        "//egofilters/mock/gen/http/security/context:go_default_library",
        "//egofilters/mock/gen/http/security/http:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)
